--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body{
 }
 .myname{
     margin-left: 20px;
+    margin-right: 0px;
 }
 .address{
     font-size: 20px;
@@ -70,4 +71,23 @@ th {
 .name{
     margin-right: 20px;
     margin-left: 50px;
+}
+footer ul li{
+    display: inline;
+   padding: 20px;
+   font-size: 20px;
+}
+footer{
+    text-align: center;
+    background-color: rgb(34, 31, 31);
+    color: white;
+    padding: 10px 0px;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
+hr{
+    color: rgb(104, 95, 95);
+    margin: 5px 0px;
 }
