--- a/style.css
+++ b/style.css
@@ -80,12 +80,16 @@ footer ul li{
 footer ul li a{
     text-align: center;
 }
-footer{
+footer {
     text-align: center;
-    background-color: rgb(34, 31, 31);
-    color: white;
-    padding: 10px 0px;
+    background-color: black;
     width: 100%;
+    font-size: 20px;
+    padding-top: 10px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    color: white;
 }
 footer a{
     color: white;
