--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ footer {
     width: 100%;
     font-size: 20px;
     padding-top: 20px;
-    /* position: absolute; */
+    position: sticky;
     left: 0;
     bottom: 0;
     color: white;
