--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ th {
     display: flex;
     justify-content: space-between;
     font-size: 20px;
-    margin: 20px 0px 100px  0px;
+    margin: 20px 0px 200px  0px;
     
     
 }
@@ -77,7 +77,7 @@ th {
 footer ul li{
     display: inline;
    padding: 10px;
-   font-size: 20px;
+   /* font-size: 20px; */
 }
 footer ul li a{
     text-align: center;
