--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
 font-family: 'Montserrat', sans-serif;
-
+/* font-weight: bold; */
 }
 body{
     background: #00F260;  
@@ -33,7 +33,6 @@ body{
 }
 .myname{
     margin-left: 20px;
-    margin-right: 0px;
 }
 .address{
     font-size: 20px;
@@ -47,14 +46,12 @@ p{
 }
 .table_center {
     margin: 20px auto;
-    font-size: 20px;
 }
 .table_center td,
 th {
     border: 2px solid black;
     padding: 5px 0;
     text-align: center;
-    margin: 0px;
 }
 .list {
     margin-top: 20px;
@@ -66,39 +63,11 @@ th {
     display: flex;
     justify-content: space-between;
     font-size: 20px;
-    margin: 20px 0px 200px  0px;
+    margin: 20px 20px;
     
     
 }
 .name{
     margin-right: 20px;
     margin-left: 50px;
-}
-footer ul li{
-    display: inline;
-   padding: 10px;
-   /* font-size: 20px; */
-}
-footer ul li a{
-    text-align: center;
-}
-footer {
-    text-align: center;
-    background-color: black;
-    width: 100%;
-    font-size: 20px;
-    padding-top: 20px;
-    position: sticky;
-    left: 0;
-    bottom: 0;
-    color: white;
-    margin-top: 50px;
-}
-footer a{
-    color: white;
-    text-decoration: none;
-}
-hr{
-    color: rgb(104, 95, 95);
-    margin: 5px 0px;
 }
