--- a/style.css
+++ b/style.css
@@ -76,3 +76,8 @@ footer{
     background-color: rgb(63, 59, 59);
     width: 100%;
 }
+footer ul li{
+    display: inline;
+    padding: 20px;
+    margin: 10px 0px;
+}
