--- a/style.css
+++ b/style.css
@@ -75,9 +75,11 @@ th {
 footer{
     background-color: rgb(63, 59, 59);
     width: 100%;
+    text-align: center;
 }
 footer ul li{
     display: inline;
-    padding: 20px;
+    /* padding: 20px; */
     margin: 10px 0px;
+    width: 100%;
 }
