--- a/style.css
+++ b/style.css
@@ -76,10 +76,12 @@ footer{
     background-color: rgb(63, 59, 59);
     width: 100%;
     text-align: center;
+    color: white;
 }
 footer ul li{
     display: inline;
     /* padding: 20px; */
     margin: 10px 0px;
     width: 100%;
+    color: white;
 }
