--- a/style.css
+++ b/style.css
@@ -80,8 +80,17 @@ footer{
 }
 footer ul li{
     display: inline;
-    /* padding: 20px; */
+    padding: 20px;
     margin: 10px 0px;
     width: 100%;
     color: white;
+    text-align: center;
+}
+footer ul li a{
+    color: white;
+
+}
+h4 a{
+    color: white;
+    text-decoration: none;
 }
