--- a/style.css
+++ b/style.css
@@ -78,6 +78,9 @@ footer{
     text-align: center;
     color: white;
 }
+footer ul{
+    margin: 5px 0px;
+}
 footer ul li{
     display: inline;
     padding: 20px;
@@ -85,6 +88,7 @@ footer ul li{
     width: 100%;
     color: white;
     text-align: center;
+    font-size: 20px;
 }
 footer ul li a{
     color: white;
@@ -93,4 +97,8 @@ footer ul li a{
 h4 a{
     color: white;
     text-decoration: none;
+}
+h4{
+    font-size: 20px;
+    padding: 5px 0px;
 }
